objects/NVMContactWorld__CLID_Prefix_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__Call_Recording_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Call Recording Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Prefix__c</fullName>
        <externalId>true</externalId>
        <label>Dialled Number Prefix</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Presented_CLID__c</fullName>
        <label>Presented Callback Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Callback Prefix Mapping</label>
    <listViews>
        <fullName>NVMContactWorld__Callback_Prefix_Mappings_View</fullName>
        <columns>NAME</columns>
        <columns>NVMContactWorld__Prefix__c</columns>
        <columns>NVMContactWorld__Presented_CLID__c</columns>
        <columns>NVMContactWorld__Call_Recording_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>Callback Prefix Mappings View</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callback Prefix Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NVMContactWorld__Prefix_must_only_contain_plus_or_digits</fullName>
        <active>true</active>
        <description>Prefix must only include plus or digits</description>
        <errorConditionFormula>NOT(REGEX(NVMContactWorld__Prefix__c, &quot;^\\+?\\d*&quot;))</errorConditionFormula>
        <errorDisplayField>NVMContactWorld__Prefix__c</errorDisplayField>
        <errorMessage>Prefix must only contain digits, optionally preceeded by a &apos;+&apos; sign</errorMessage>
    </validationRules>
</CustomObject>